[tool.poetry]
name = "flask-healthz"
version = "1.0.0"
description = "A simple module to allow you to easily add health endpoints to your Flask application"

license = "BSD-3-Clause"

authors = [
  "Fedora Infrastructure <admin@fedoraproject.org>"
]

readme = 'README.md'

repository = "https://github.com/fedora-infra/flask-healthz"
homepage = "https://github.com/fedora-infra/flask-healthz"

[tool.poetry.dependencies]
python = "^3.7.0"
flask = "<3.0.1"

[tool.poetry.dev-dependencies]
flake8 = "*"
black = "*"
bandit = "*"
pytest = "*"
coverage = {extras = ["toml"], version = "*"}
pytest-cov = "*"
pre-commit = "*"
isort = "*"
safety = "*"

[tool.pytest.ini_options]
testpaths = [
    "flask_healthz/tests",
]

[tool.coverage.run]
branch = true
source = ["flask_healthz"]

[tool.coverage.paths]
source = [
   "flask_healthz",
   ".tox/*/site-packages/flask_healthz",
]

[tool.coverage.report]
fail_under = 100
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
omit = [
    "flask_healthz/tests/*",
    "flask_healthz/__init__.py",
]

[tool.isort]
profile = "black"
lines_after_imports = 2
force_alphabetical_sort_within_sections = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
